# ncs

./: .gitignore  PROJECT_STATE.md  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
notebooks/: 1.0-sparse_signal_reconstruction.ipynb  1.1-noisy_signal_reconstruction.ipynb  1.2-nanopore-tree-sparsity.ipynb  1.3-nanopore-tree-sparsity.ipynb
prototyping/: first_reconstruction.py  wavelet_testing.py
prototyping/exact_tree_projection/: simple_test.py
prototyping/gaussian_nanopore_reconstruction/: first_attempt.py
prototyping/simple_sparsity/: fourier_subsampling_reconstruction.py  gaussian_reconstruction.py  random_modulation_reconstruction.py  subsampling_reconstruction.py  wavelet_packet_reconstruction.py
scripts/: 01_cliveome_setup.py
src/: main.py
src/ncs/: __init__.py  coherence_diagnostics.py  compressed_sensing_module.py  config.py  exact_tree_projection.py  experiments.py  experiments_measurement_comparison.py  measurement_module.py  reconstruction_module.py  signal_loader.py  sparse_signal_generator.py  wavelet_module.py  wavelet_packet_module.py  wt_coeffs.py
src/prototyping/: numpy_test.py  (+5 more)
testing/: coeff_support_test.py  example.parquet  first_reconstruction.py  numpy_test.py  parquet_testing.py  random_sparse_signal_test.py  wavelet_testing.py
tests/: test_coherence_diagnostics.py  test_compressed_sensing_module.py  test_exact_tree_projection.py  test_experiments_measurement_comparison.py  test_measurement_module.py  test_reconstruction_module.py  test_sparse_signal_generator.py  test_wavelet_module.py  test_wt_coeffs.py
(+15 files in other folders)
